# lpr-easy-pro

./: .gitignore  README.md  pyproject.toml  requirements.txt
lpr_easy/: __init__.py  __main__.py  cli.py  config.py
lpr_easy/detectors/: yolo_detector.py
lpr_easy/ocr/: easyocr_engine.py
lpr_easy/pipelines/: detect_then_read.py  video_demo.py
lpr_easy/utils/: io_utils.py  text_utils.py
